# spydir

./: .gitignore  LICENSE  README.md  pyproject.toml  spydir.py
